latest copy of 12-07-2024

--- a/src/app/HiringManagement/offer-details/offer-details.component.html
+++ b/src/app/HiringManagement/offer-details/offer-details.component.html
@@ -351,8 +351,8 @@
                                 </div>
                                 </div>
                                 <div class="col-lg-3"[class.has-error]="OfferDetailsForm.get('NoticePeriod')?.invalid && OfferDetailsForm.get('NoticePeriod')?.touched">
-                                    <label class="form-label font-type fs-12 fw-semibold">Notice Period (In Months)</label>
-                                    <input type="number" class="form-control font-type textbox-15 h-30" placeholder="Notice Period (In Months)"formControlName="NoticePeriod">
+                                    <label class="form-label font-type fs-12 fw-semibold">Notice Period (In Days)</label>
+                                    <input type="number" class="form-control font-type textbox-15 h-30" placeholder="Notice Period (In Days)"formControlName="NoticePeriod">
                                     <div *ngIf="OfferDetailsForm.get('NoticePeriod')?.invalid && OfferDetailsForm.get('NoticePeriod')?.touched" class="text-danger">
                                         *Required!                                        
                                     </div>
