--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'ngx-org-chart/_theming.scss';
+
 .timepicker-overlay{
     z-index: 10000000 !important;
 }
