--- a/src/app/HiringManagement/candidate-evaluation/candidate-evaluation.component.html
+++ b/src/app/HiringManagement/candidate-evaluation/candidate-evaluation.component.html
@@ -393,7 +393,7 @@
                     
                     <div class="col-lg-12" >
                         <div class="hstack gap-1 justify-content-end">
-                            <a href="HiringRequestDashboard">
+                            <a href="javascript:history.back()">
                             <button type="button" class="btn btn-success btn-label right nexttab nexttab font-type text-white"><i class="ri-arrow-go-back-line label-icon align-middle fs-16 ms-2"></i>Back</button>
                             </a>
                         </div>
