--- a/src/app/HiringManagement/hiring-center/hiring-center.component.html
+++ b/src/app/HiringManagement/hiring-center/hiring-center.component.html
@@ -54,13 +54,13 @@
                             <div class="d-flex profile-wrapper">
                                 <!-- Nav tabs -->
                                 <ul class="nav nav-pills animation-nav profile-nav gap-2 gap-lg-3 flex-grow-1 fs-12" role="tablist">
-                                    <li class="nav-item" *ngIf="grpname.includes('HR') || grpname.includes('HOD') || grpname.includes('LM')">
+                                    <li class="nav-item" *ngIf="grpname.includes('HR') || grpname.includes('HOD') || grpname.includes('LM')"[hidden]="grpname.includes('LM-VP')">
                                         <a class="nav-link fs-14 active font-type" data-bs-toggle="tab" href="#JobOpenings" role="tab"(click)="ontabSelected(1)">
                                             <i class="ri-briefcase-4-line d-inline-block d-md-none"></i> <span class="d-none d-md-inline-block">Hiring Requests</span>
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link fs-14  font-type" [ngClass]="{'active': !grpname.includes('HR') && !grpname.includes('HOD') && !grpname.includes('LM')}"data-bs-toggle="tab" href="#JobRequests" role="tab"(click)="ontabSelected(2)">
+                                        <a class="nav-link fs-14  font-type" [ngClass]="{'active': showtab2}"data-bs-toggle="tab" href="#JobRequests" role="tab"(click)="ontabSelected(2)">
                                             <i class="ri-briefcase-4-line d-inline-block d-md-none"></i> <span class="d-none d-md-inline-block">Approval Requests</span>
                                         </a>
                                     </li>   
@@ -81,7 +81,7 @@
                             <!-- Tab panes -->
                             <div class="tab-content pt-2 text-muted">
                                 <!-- Job openings -->
-                                <div class="tab-pane active" id="JobOpenings" role="tabpanel"*ngIf="grpname.includes('HR') || grpname.includes('HOD') || grpname.includes('LM')">
+                                <div class="tab-pane active" id="JobOpenings" role="tabpanel"*ngIf="grpname.includes('HR') || grpname.includes('HOD') || grpname.includes('LM')"[hidden]="grpname.includes('LM-VP')">
                                     <div class="row topbar-up">
                                         <div class="col-lg-12">
                                             <div class="card">
@@ -208,7 +208,7 @@
                                 </div>
                                 <!-- end Job openings tab -->
                                 <!-- Job requests approvals -->
-                        <div class="tab-pane" id="JobRequests" role="tabpanel"[ngClass]="{'active': !grpname.includes('HR') && !grpname.includes('HOD') && !grpname.includes('LM')}">
+                        <div class="tab-pane" id="JobRequests" role="tabpanel"[ngClass]="{'active': showtab2}">
                             <div class="row topbar-up">
                                 <div class="col-lg-12">
                                     <div class="card shadow-lg">
@@ -781,7 +781,7 @@
                                                     </p>
                                                 </div>
                                             </div>
-                                            <div class="row mb-3" [hidden]="grpname.includes('HR')||grpname.includes('HOD')">
+                                            <div class="row mb-3" [hidden]="approver==' '">
                                                 <div class="col-lg-3">
                                                     <h3 class="fw-semibold fs-12 font-type"><span>Approver</span></h3>
                                                 </div>
