--- a/src/app/LMS/training-requests/training-requests.component.html
+++ b/src/app/LMS/training-requests/training-requests.component.html
@@ -99,18 +99,18 @@
                                                         <div class="p-2">
                                                         <div class="d-flex mb-1">
                                                                 <div class="flex-grow-1 ma-5">
-                                                                    <p class="text-truncate fs-13 mb-0"><i class="ri-stop-fill align-middle fs-15 text-orange"></i><span class="ms-2 font-type">Assigned</span></p>
+                                                                    <p class="text-truncate fs-13 mb-0"><i class="ri-stop-fill align-middle fs-15 text-orange"></i><span class="ms-2 font-type">Assigned</span> - <span class="ms-2 font-type text-orange fw-semibold fs-14">{{assignedhrs}}hrs</span></p>
                                                                 </div>
                                                                 <div class="flex-shrink-0 ma-5">
-                                                                    <p class="text-truncate mb-0"><span class="ms-2 font-type text-orange fw-semibold fs-14">{{assignedhrs}}hrs</span></p>                      
+                                                                    <p class="text-truncate fs-13 mb-0"><i class="ri-stop-fill align-middle fs-15 text-blue"></i><span class="ms-2 font-type">Target</span> - <span class="ms-2 font-type text-blue fw-semibold fs-14">{{TARGET_DURATION}}hrs</span></p>
                                                                 </div>
                                                         </div>
                                                         <div class="d-flex mb-0">
                                                             <div class="flex-grow-1 ma-5">
-                                                                <p class="text-truncate fs-13 mb-0"><i class="ri-stop-fill align-middle fs-15 text-blue"></i><span class="ms-2 font-type">Pending</span></p>
+                                                                <p class="text-truncate fs-13 mb-0"><i class="ri-stop-fill align-middle fs-15 text-orange"></i><span class="ms-2 font-type">Pending</span> - <span class="ms-2 font-type text-orange fw-semibold fs-14">{{pendinghrs}}hrs</span></p>
                                                             </div>
                                                             <div class="flex-shrink-0 ma-5">
-                                                                <p class="text-truncate mb-0"><span class="ms-2 font-type text-blue fw-semibold fs-14">{{pendinghrs}}hrs</span></p>   
+                                                                <p class="text-truncate fs-13 mb-0"><i class="ri-stop-fill align-middle fs-15 text-blue"></i><span class="ms-2 font-type">Completed</span> - <span class="ms-2 font-type text-blue fw-semibold fs-14">{{COMPLETED_DURATION}}hrs</span></p>   
                                                             </div>
                                                          </div>
                                                         </div>
