--- a/src/app/payroll/salary-revision/salary-revision.component.html
+++ b/src/app/payroll/salary-revision/salary-revision.component.html
@@ -188,12 +188,12 @@
 
                     <!-- Bulk Order -->
                     <div *ngIf="user==='bulk'">
-                        <div class="alert alert-success alert-dismissible" style="width:450px;" *ngIf="success">                                
+                        <!-- <div class="alert alert-success alert-dismissible" style="width:450px;" *ngIf="success">                                
                             <strong><i class="fa fa-check-circle text-success" style="font-size: 25px;"></i> {{success}}</strong> 
                         </div>
                         <div class="alert alert-danger alert-dismissible" style="width:450px;" *ngIf="failed">                                
                             <strong><i class="fa fa-times-circle text-danger" style="font-size: 25px;"></i>  {{failed}}</strong> 
-                        </div>
+                        </div> -->
                         <form [formGroup]="fileuploadForm" (ngSubmit)="upload()">
                         <div class="row ma-5">
                             <div class="col-lg-12">
@@ -219,7 +219,7 @@
                         </div>      
                         <div class="col-lg-12 margin-up-7" id="divsubmit" >
                             <div class="hstack gap-2 justify-content-end">
-                                <button type="submit" class="btn btn-orange font-type">Submit</button>
+                                <button type="submit" class="btn btn-orange font-type" data-bs-toggle="modal" data-bs-target="#SuccessRecordModal">Submit</button>
                                 <button type="button" class="btn btn-blue font-type">Cancel</button>
                             </div>
                         </div>
@@ -281,7 +281,7 @@
          <!--End Edit Model-->     
           <!--Modal For Success Message Start-->
           <div class="modal fade zoomIn" id="SuccessRecordModal" tabindex="-1" aria-labelledby="deleteRecordLabel" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-dialog modal-dialog-centered modal-lg">
                 <div class="modal-content">
                     <div class="modal-header bg-orange padding-up-5">
                         <h5 class="modal-title" id="exampleModalLabel">&nbsp;</h5>
@@ -294,11 +294,34 @@
                         </div>
                     </div>
                     <div class="modal-body" *ngIf="showModal==2">
-                    <div class="container">
-                        <h2 class="text-center" style="font-size: 12px;"><i class="fa fa-times-circle text-danger" style="font-size: 25px;" style="font-size: 12px;"></i> {{failed}}</h2>
-                        
+                        <div class="container">
+                            <h2 class="text-center" style="font-size: 12px;"><i class="fa fa-times-circle text-danger" style="font-size: 25px;" style="font-size: 12px;"></i> {{failed}}</h2>
+                            
+                        </div>
                     </div>
-                </div>
+                    <div class="modal-body" *ngIf="showModal==3">
+                        <div class="container">
+                            <h2 class="text-center" style="font-size: 12px;"><i class="fa fa-check-circle text-success" style="font-size: 25px;" style="font-size: 12px;"></i> {{success}}</h2>
+                            
+                            <table class="table table-bordered">
+                                <thead>
+                                    <tr>
+                                        <th>EMPCODE</th>
+                                        <th>REMARKS</th>
+                                        <th>EFFECTIVE DATE</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr *ngFor="let row of fetchedData">
+                                        <td>{{ row.EMP_CODE }}</td>
+                                        <td>{{ row.REMARKS }}</td>
+                                        <td>{{ row.ISSUED_DATE | date:'dd-MM-yyyy' }}</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                            
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
