--- a/src/app/reports/training-matrix/training-matrix.component.html
+++ b/src/app/reports/training-matrix/training-matrix.component.html
@@ -57,7 +57,7 @@
                                             <label></label>
                                             <div>
                                                 <button type="submit" style="margin-top: 4px!important;" class="btn btn-orange font-type fs-12 add-button text-white" (click)="viewReport()"> <i class="ri-file-text-line"></i>
-                                                    View Report
+                                                    Download Report
                                                 </button>
                                             </div>
                                         </div>
